[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["Seung-Yoon Oh <feynubrick@proton.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
ipython = "^8.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
